<resources>
    <string name="app_name">MPB</string>
    <string name="val_tv_seleccionar_anio">Seleccionar un año:</string>
    <string name="val_tv_tcurso">Curso</string>
    <string name="val_tv_tp">P</string>
    <string name="val_tv_tn3">N3</string>
    <string name="val_tv_tn2">N2</string>
    <string name="val_tv_tn1">N1</string>
    <string name="val_tv_cursos">Cursos</string>

    <string name="parrafo_test">quis turpis eget elit sodales scelerisque mauris sit amet eros suspendisse accumsan tortor quis turpis sed...</string>
    <string name="parrafo_test_largo">Se les cita a los padres de familia o apoderados a la 12va reunión de padres que se realizará el LUNES 14 DE DICIEMBRE a las 10:00 am, donde se coordinarán los utimos puntos sobre el paseo próximo a realizar este 28 de diciembre. <br /><br /> Confirme su asistencia a la reunión por este medio para tenerlo en cuenta.</string>

    <string name="title_activity_menu_estudiante">MenuEstudiante</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_apoderado">MenuApoderado</string>

    <!-- Menu estudiante -->
    <string name="valnav_principal">Inicio</string>
    <string name="valnav_notas">Consultar notas</string>
    <string name="valnav_asistencia">Consultar asistencias</string>
    <string name="valnav_listar_docentes">Listar docentes</string>
    <string name="valnav_horario">Consultar horario</string>
    <string name="valnav_cerrar">Cerrar sesión</string>

    <!-- Menu apoderado -->
    <string name="valnav_bandeja_entrada">Bandeja de entrada</string>
    <string name="valnav_acceder_info_estudiantes">Estudiantes</string>
    <string name="valnav_registrar_justificacion">Registrar justificacion</string>
    <string name="valnav_listar_justificaciones">Listar justificaciones</string>
    <string name="valnav_pefil">Perfil</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>