<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/home2"
            android:title="Inicio" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/usuario"
            android:title="Perfil"/>
        <item
            android:id="@+id/nav_consultar_asistencias"
            android:icon="@drawable/ic_consultar_asistencia"
            android:title="@string/valnav_asistencia"/>
        <item
            android:id="@+id/nav_consultar_notas"
            android:icon="@drawable/ic_consultar_notas"
            android:title="@string/valnav_notas"/>
        <item
            android:id="@+id/nav_horario"
            android:icon="@drawable/calendario"
            android:title="Consultar horario"/>
        <item
            android:id="@+id/nav_docentes"
            android:icon="@drawable/usuario"
            android:title="@string/valnav_listar_docentes"/>
        <item
            android:id="@+id/nav_cerrar_sesion"
            android:icon="@drawable/cerrar_sesion"
            android:title="@string/valnav_cerrar" />
    </group>
</menu>