<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_principal">
    <fragment
        android:id="@+id/nav_principal"
        android:name="pe.mariaparadodebellido.fragments.InicioFragment"
        android:label="@string/valnav_principal"
        tools:layout="@layout/fragment_inicio" />
    <fragment
        android:id="@+id/nav_consultar_asistencias"
        android:name="pe.mariaparadodebellido.fragments.ConsultarAsistenciasCursosFragment"
        android:label="@string/valnav_asistencia"
        tools:layout="@layout/fragment_consultar_asistencias_cursos" />
    <fragment
        android:id="@+id/nav_consultar_notas"
        android:name="pe.mariaparadodebellido.fragments.ConsultarNotasFragment"
        android:label="@string/valnav_notas"
        tools:layout="@layout/fragment_consultar_notas" />
    <!--fragment
        android:id="@+id/nav_horario"
        android:name="pe.mariaparadodebellido.fragments.HorarioFragment"
        android:label="@string/valnav_horario"
        tools:layout="@layout/fragment_horario" /-->
    <fragment
        android:id="@+id/nav_cerrar_sesion"
        android:name="pe.mariaparadodebellido.fragments.CerrarSesionFragment"/>
</navigation>