<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_estudiante"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="true"
    tools:targetApi="lollipop">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp">

        <ImageView
            android:id="@+id/iv_usuario"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/usuario"
            app:layout_constraintBottom_toTopOf="@+id/tv_info_nombres"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/gl_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_consultar_notas" />

        <TextView
            android:id="@+id/tv_info_nombres"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Nombre1 Nombre2"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/tv_info_apellidos"
            app:layout_constraintEnd_toEndOf="@+id/gl_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_usuario" />

        <TextView
            android:id="@+id/tv_info_apellidos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:text="Apellido1 Apellido2"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/btn_perfil"
            app:layout_constraintEnd_toEndOf="@+id/gl_info"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_info_nombres" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <Button
            android:id="@+id/btn_consultar_notas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/valnav_notas"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_info"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_consultar_asistencias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/valnav_asistencia"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_info"
            app:layout_constraintTop_toBottomOf="@id/btn_consultar_notas" />

        <Button
            android:id="@+id/btn_consultar_horario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/valnav_horario"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_info"
            app:layout_constraintTop_toBottomOf="@id/btn_consultar_asistencias" />

        <Button
            android:id="@+id/btn_listar_docentes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/valnav_listar_docentes"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_info"
            app:layout_constraintTop_toBottomOf="@id/btn_consultar_horario" />

        <Button
            android:id="@+id/btn_perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/valnav_pefil"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_info"
            app:layout_constraintTop_toBottomOf="@id/btn_listar_docentes" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>